// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot - mount 1`] = `
<button
  className="sc-bdfBQB gRvcyI submitButton"
  onClick={[Function]}
  type="submit"
/>
`;

exports[`Button snapshot - render 1`] = `
<button
  class="sc-bdfBQB gRvcyI submitButton"
  type="submit"
/>
`;

exports[`Button snapshot - shallow 1`] = `
<styled.button
  className="submitButton"
  onClick={[Function]}
  type="submit"
/>
`;
